--- a/views/recipeBooks/show.ejs
+++ b/views/recipeBooks/show.ejs
@@ -1,8 +1,15 @@
 <% include ../partials/header %>
   <!-- TODO: Populate UserRecipes And F2fRecipes in controller -->
   <h1><%= book.title %></h1>
-  <a href="/recipe_books/<%= book._id %>/user_recipes">See User Recipes</a>
-  <a href="/recipe_books/<%= book._id %>/user_recipes/new">Add A New Recipe</a>
+  <a href="/recipe_books/<%= book._id %>/user_recipes">See Your Recipes</a>
+  <a href="/recipe_books/<%= book._id %>/f2f_recipes">See F2F Recipes</a>
+  <a href="/recipe_books/<%= book._id %>/user_recipes/new">Add Your Own Recipe</a>
+  <h2>Search For a Recipe</h2>
+  <form action="/search_results" method="get">
+    <input type="hidden" name="recipeBook" value="<%= book.id %>">
+    <input type="search" name="search" placeholder="Find A Recipe">
+    <input type="submit" name="name" value="Submit">
+  </form>
   <form action="/recipe_books/<%= book.id %>?_method=DELETE" method="post">
     <input type="submit" name="submit" value="Delete Book">
   </form>
