--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
 <% include ../views/partials/header %>
 <h1>HOME PAGE</h1>
+<a href="/signup">Signup</a>
+<a href="/login">Login</a>
 <% include ../views/partials/footer %>
