--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,10 @@
 <% include ../views/partials/header %>
-<h1>HOME PAGE</h1>
-<a href="/signup">Signup</a>
-<a href="/login">Login</a>
+<div class="jumbotron">
+  <h1>Welcome To YouRecipe</h1>
+  <p>
+    A Simple App For Creating Recipe Books Online
+  </p>
+  <a class="waves-effect waves-light btn-large home-button1" href="/signup">Signup</a>
+  <a class="waves-effect waves-light btn-large home-button2" href="/login">Login</a>
+</div>
 <% include ../views/partials/footer %>
