--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,18 @@
-</body>
+
+    </div>
+   </main>
+   <footer class="page-footer #81d4fa light-blue lighten-1">
+      <div class="footer-copyright">
+        <div class="container">
+          © 2015 Clayton Persyk
+          <a class="grey-text text-lighten-4 right" href="http://food2fork.com">Powered By Food2Fork.com</a>
+        </div>
+      </div>
+    </footer>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $(".button-collapse").sideNav();
+      });
+    </script>
+   </body>
 </html>
