--- a/views/f2fRecipes/new.ejs
+++ b/views/f2fRecipes/new.ejs
@@ -1,14 +1,28 @@
 <% include ../partials/header %>
-  <h1><%= recipe.title %></h1>
-  <h5>Social Rank: <%= parseFloat(recipe.social_rank).toFixed(2) %></h5>
-  <img src="<%= recipe.image_url %>" alt="<%= recipe.title %> image" />
-  <a href="<%= recipe.source_url %>">Get <%= recipe.title %> recipe from <%= recipe.publisher %></a>
-  <form action="/recipe_books/<%= bookId %>/f2f_recipes" method="post">
-    <input type="hidden" name="title" value="<%= recipe.title %>">
-    <input type="hidden" name="imageUrl" value="<%= recipe.image_url %>">
-    <input type="hidden" name="source" value="<%= recipe.source_url %>">
-    <input type="hidden" name="socialRating" value="">
-    <input type="hidden" name="dateAdded" value="<%= moment().format() %>">
-    <input type="submit" name="submit" value="Add Recipe">
-  </form>
+<h1 class="f2f-heading"><%= recipe.title %></h1>
+  <div class="row">
+    <div class="recipe-container col m6">
+      <p class="social-rating">
+        <b>Social Rating: <%= parseFloat(recipe.social_rank).toFixed(2) %></b>
+      </p>
+        <img class="recipe-image" src="<%= recipe.image_url %>" alt="<%= recipe.title %> image" />
+        <p class="published">
+          <b>Published By: <%= recipe.publisher %></b>
+        </p>
+      </div>
+      <div class="f2f-recipe-options col m6">
+        <a class="waves-effect waves-light btn" href="<%= recipe.source_url %>">View Recipe</a><br><br>
+        <form action="/recipe_books/<%= bookId %>/f2f_recipes" method="post">
+          <input type="hidden" name="title" value="<%= recipe.title %>">
+          <input type="hidden" name="imageUrl" value="<%= recipe.image_url %>">
+          <input type="hidden" name="source" value="<%= recipe.source_url %>">
+          <input type="hidden" name="socialRating" value="<%= parseFloat(recipe.social_rank).toFixed(2) %>">
+          <input type="hidden" name="dateAdded" value="<%= moment().format() %>">
+          <button class="waves-effect waves-light btn "  type="submit" name="submit">Add Recipe</button>
+        </form>
+        <br>
+        <a href="/recipe_books/<%= bookId %>/f2f_recipes">Back To F2F Recipes</a><br>
+        <a href="/">Back To Recipe Books</a>
+      </div>
+  </div>
 <% include ../partials/footer %>
