--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,40 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Recipe Books</title>
+    <title>YouRecipes</title>
+    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
   </head>
   <body>
+    <header>
+      <nav>
+        <div class="nav-wrapper #81d4fa light-blue lighten-1">
+          <a href="/recipe_books" class="brand-logo">YouRecipe</a>
+          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <% if (userSession) { %>
+              <li><a href="/logout">Logout</a></li>
+              <li><a href="/recipe_books">My Recipe Books</a></li>
+            <% } else { %>
+              <li><a href="/signup">Signup</a></li>
+              <li><a href="/login">Login</a></li>
+            <% } %>
+          </ul>
+          <ul class="side-nav" id="mobile-demo">
+            <% if (userSession) { %>
+              <li><a href="/logout">Logout</a></li>
+              <li><a href="/recipe_books">My Recipe Books</a></li>
+            <% } else { %>
+              <li><a href="/signup">Signup</a></li>
+              <li><a href="/login">Login</a></li>
+            <% } %>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div class="container">
