--- a/views/userRecipes/index.ejs
+++ b/views/userRecipes/index.ejs
@@ -1,9 +1,20 @@
 <% include ../partials/header %>
-
-  <h1>Recipes in <%= recipeBook.title %> book</h1>
-
-  <% for(var i = 0; i < recipeBook.userRecipes.length; i++) { %>
-    <li><a href="/recipe_books/<%= recipeBook._id %>/user_recipes/<%= recipeBook.userRecipes[i]._id %>"><%= recipeBook.userRecipes[i].title %></a></li>
-  <% } %>
-
-<% include ../partials/footer %>
+    <h1>My Recipes in <%= viewHelpers.capitalize(recipeBook.title) %> book</h1>
+      <% if(recipes.length === 0) { %>
+        <p>
+          No recipes.<a href="/recipe_books/<%= recipeBook.id %>"> Click Here</a>  to start adding recipes.
+        </p>
+      <% } %>
+      <% for(var i = 0; i < recipes.length; i++) { %>
+        <ul class="collection">
+          <li class="collection-item avatar">
+            <img src="<%= recipes[i].imageUrl %>" alt="<%= recipes[i].title %>" class="pics">
+            <div class="recipe-search-result">
+              <span class="title"><a href="/recipe_books/<%= recipeBook.id %>/user_recipes/<%= recipes[i].id %>"><%= recipes[i].title %></a></span>
+            </div>
+          </li>
+        </ul>
+      <% } %>
+      <a href="/recipe_books/<%= recipeBook.id %>">Back To <%= viewHelpers.capitalize(recipeBook.title) %> Book</a><br>
+      <a href="/">Back To Recipe Books</a>
+  <% include ../partials/footer %>
