--- a/views/userRecipes/show.ejs
+++ b/views/userRecipes/show.ejs
@@ -1,7 +1,43 @@
 <% include ../partials/header %>
-  <h1><%= recipe.title %></h1>
-  <a href="/recipe_books/<%= recipe.book._id %>/user_recipes/<%= recipe._id %>/edit">Edit Recipe</a>
-  <form action="/recipe_books/<%= recipe.book._id %>/user_recipes/<%= recipe._id %>?_method=DELETE" method="POST">
-    <input type="submit" name="delete" value="DELETE RECIPE!!!">
-  </form>
+<div class="row">
+  <div class="col m6">
+    <div class="card">
+       <div class="card-image waves-effect waves-block waves-light">
+         <img class="activator" src="<%= recipe.imageUrl %>" alt="<%= recipe.title %>">
+       </div>
+       <div class="card-content">
+         <span class="card-title activator grey-text text-darken-4"><%= recipe.title %><i class="material-icons right">more_vert</i></span>
+       </div>
+       <div class="card-reveal">
+         <span class="card-title grey-text text-darken-4"><%= recipe.title %><i class="material-icons right">close</i></span>
+         <br>
+         <a class="waves-effect waves-light btn" href="/recipe_books/<%= recipe.book._id %>/user_recipes/<%= recipe._id %>/edit">Edit Recipe</a>
+         <br>
+         <br>
+         <form action="/recipe_books/<%= recipe.book._id %>/user_recipes/<%= recipe._id %>?_method=DELETE" method="POST">
+           <button class="waves-effect waves-light btn #f44336 red" type="submit" name="delete">DELETE RECIPE</button>
+         </form>
+       </div>
+     </div>
+   <div class="recipe-links">
+     <a href="/recipe_books/<%= recipe.book.id %>/user_recipes/<%= recipe.ig %>">Back to My Recipes</a><br>
+     <a href="/">Back to Recipe Books</a>
+   </div>
+   </div>
+   <div class="col m6">
+      <h4>Ingredients:</h4>
+      <ul>
+        <% for(var i = 0; i < ingredients.length; i += 1) { %>
+          <li><%= ingredients[i] %></li>
+        <% } %>
+      </ul>
+      <h4>Direction:</h4>
+      <ul>
+        <% for(var i = 0; i < directions.length; i += 1) { %>
+          <li><%= directions[i] %></li>
+        <% } %>
+      </ul>
+   </div>
+</div>
+
 <% include ../partials/footer %>
