--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,57 +1,54 @@
 <% include ../partials/header %>
-<h1>Sign up</h1>
 <div class="row">
+  <h1>Sign up</h1>
+  <ul>
+    <% if (err) { %>
+        <% if (err.code === 11000) { %>
+          <li class="#d32f2f-text red-text darken-2">Email Already Taken</li>
+        <% } else { %>
+          <% for(var key in err.errors) { %>
+            <li class="#d32f2f-text red-text darken-2"><%=  err.errors[key].path %> <%= err.errors[key].kind %></li>
+          <% } %>
+        <% } %>
+    <% } %>
+  </ul>
   <form method="POST" action="/signup" >
     <div class="row">
-    <div class="col s4">
-      <div class="form-group">
-        <label>First Name:
-          <input type="text" id="first-name" name="user[firstName]" class="form-control" autofocus>
-        </label>
-      </div>
+    <div class="col s4 input-field">
+        <input type="text" id="first-name" name="user[firstName]" class="form-control" autofocus>
+        <label for="first-name" >First Name: </label>
     </div>
   </div>
   </br>
   <div class="row">
-  <div class="col s4">
-    <div class="form-group">
-      <label>Last Name:
-        <input type="text" id="last-name" name="user[lastName]" class="form-control">
-      </label>
-    </div>
+  <div class="col s4 input-field">
+      <input type="text" id="last-name" name="user[lastName]" class="form-control">
+      <label for="last-name">Last Name:    </label>
   </div>
 </div>
 </br>
   <div class="row">
-    <div class="col s4">
+    <div class="col s4 input-field">
       <div class="form-group">
-        <label>Email:
           <input type="email" id="email" name="user[email]" class="form-control" >
-        </label>
+          <label for="email">Email:  </label>
       </div>
     </div>
   </div>
   </br>
   <div class="row">
-    <div class="col s4">
-      <div class="form-group">
-        <label> Password:
-          <input type="password" id="password" name="user[password]" class="form-control">
-        </label>
-      </div>
+    <div class="col s4 input-field">
+        <input type="password" id="password" name="user[password]" class="form-control">
+        <label for="password"> Password:</label>
     </div>
   </div>
-  </br>
   <div class="row">
-    <div class="col s4">
-      <div class="form-group">
-        <input type="submit" value="Sign up" class="btn btn-primary">
-      </div>
+    <div class="col s4 input-field">
+      <input type="submit" value="Sign up" class="btn btn-primary">
     </div>
   </div>
   </form>
+  <a href="/login">Already have an account? Login in here</a>
 </div>
 
-</br></br>
-<a href="/login">Already have an account? Login in here</a>
 <% include ../partials/footer %>
