--- a/views/userRecipes/show.ejs
+++ b/views/userRecipes/show.ejs
@@ -1,4 +1,5 @@
 <% include ../partials/header %>
+<h1 class="my-recipe-title"><%= recipe.title %></h1>
 <div class="row">
   <div class="col m6">
     <div class="card">
