--- a/views/userRecipes/new.ejs
+++ b/views/userRecipes/new.ejs
@@ -25,5 +25,6 @@
     <button class="waves-effect waves-light btn" type="submit" name="submit">Add Recipe</button>
   </form>
   <br>
-  <a href="/">Back To Recipe Books</a>
+  <a href="/">Back To Recipe Books</a><br>
+  <a href="/recipe_books/<%= recipeBook.id %>">Back To <%= viewHelpers.capitalize(recipeBook.title) %> Recipes</a>
 <% include ../partials/footer %>
