--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,7 @@
     <header>
       <nav>
         <div class="nav-wrapper #81d4fa light-blue lighten-1">
+          <a href="/recipe_books"><img class="logo" src="images/logo.png" alt="logo" /></a>
           <a href="/recipe_books" class="brand-logo">YouRecipe</a>
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
