--- a/views/recipeBooks/new.ejs
+++ b/views/recipeBooks/new.ejs
@@ -9,4 +9,6 @@
     </div>
     <button class="waves-effect waves-light btn" type="submit" name="name">Submit</button>
   </form>
+  <br>
+  <a href="/">Back To Recipe Books</a>
 <% include ../partials/footer %>
