fix show and new page for f2fRecipes

--- a/views/f2fRecipes/show.ejs
+++ b/views/f2fRecipes/show.ejs
@@ -7,7 +7,8 @@
       </p>
       <img class="recipe-image" src="<%= recipe.imageUrl %>" alt="<%= recipe.title %>" />
       <p class="published">
-        <b>Published By: <%= recipe.publisher %></b>
+        <b>Published By:<b/><br>
+        <b><%= recipe.publisher %></b>
       </p>
     </div>
     <div class="f2f-recipe-options col m6">
