--- a/views/f2fRecipes/new.ejs
+++ b/views/f2fRecipes/new.ejs
@@ -7,7 +7,8 @@
       </p>
         <img class="recipe-image" src="<%= recipe.image_url %>" alt="<%= recipe.title %> image" />
         <p class="published">
-          <b>Published By: <%= recipe.publisher %></b>
+          <b>Published By:<b/><br>
+          <b><%= recipe.publisher %></b>
         </p>
       </div>
       <div class="f2f-recipe-options col m6">
