--- a/views/userRecipes/index.ejs
+++ b/views/userRecipes/index.ejs
@@ -8,9 +8,9 @@
       <% for(var i = 0; i < recipes.length; i++) { %>
         <ul class="collection">
           <li class="collection-item avatar">
-            <img src="<%= recipes[i].imageUrl %>" alt="<%= recipes[i].title %>" class="pics">
+            <img src="<% if (recipes[i].imageUrl ) { %><%= recipes[i].imageUrl%><% } else { %> https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSCJg_2gj-Fs7cPjws0jhkwcwqsvUdvID2Pn93E4W0IY_HTdudK<% } %>" alt="<%= recipes[i].title %>" class="pics">
             <div class="recipe-search-result">
-              <span class="title"><a href="/recipe_books/<%= recipeBook.id %>/user_recipes/<%= recipes[i].id %>"><%= recipes[i].title %></a></span>
+              <span class="title"><a href="/recipe_books/<%= recipeBook.id %>/user_recipes/<%= recipes[i].id %>"><% if(recipes[i].title) { %><%= recipes[i].title %> <% } else { %><%= "No Title" %><% } %></a></span>
             </div>
           </li>
         </ul>
