--- a/views/userRecipes/show.ejs
+++ b/views/userRecipes/show.ejs
@@ -1,10 +1,11 @@
 <% include ../partials/header %>
-<h1 class="my-recipe-title"><%= recipe.title %></h1>
+<h1 class="my-recipe-title"><%= recipe.title || "No Title"%></h1>
 <div class="row">
   <div class="col m6">
     <div class="card">
        <div class="card-image waves-effect waves-block waves-light">
-         <img class="activator" src="<%= recipe.imageUrl %>" alt="<%= recipe.title %>">
+         <img class="activator" src="<% if (recipe.imageUrl) { %><%= recipe.imageUrl %><% } else { %> https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSCJg_2gj-Fs7cPjws0jhkwcwqsvUdvID2Pn93E4W0IY_HTdudK<% } %>" alt="<%= recipe.title %>">
+         <img src="" alt="" />
        </div>
        <div class="card-content">
          <span class="card-title activator grey-text text-darken-4"><%= recipe.title %><i class="material-icons right">more_vert</i></span>
