add pluralize viewHelper function v.4 - fixed?

--- a/views/recipeBooks/index.ejs
+++ b/views/recipeBooks/index.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-  <h1 class="center-align"><%= books.length %> Recipe <%= veiewHelpers.pluralize("Book", books.length) %> </h1>
+  <h1 class="center-align"><%= books.length %> Recipe <%= veiwHelpers.pluralize("Book", books.length) %> </h1>
   <% for(var i = 0; i < books.length; i++) { %>
     <div class="card left">
       <div class="card-image waves-effect waves-block waves-light">
