recipeBook UI improvements

--- a/views/recipeBooks/show.ejs
+++ b/views/recipeBooks/show.ejs
@@ -7,6 +7,9 @@
 
 
   <h2>Search For A Recipe</h2>
+  <p>
+    (use commas for multi-item searches)
+  </p>
   <form action="/search_results" method="get">
     <input type="hidden" name="recipeBook" value="<%= book.id %>">
     <input type="search" name="search" placeholder="Find A Recipe">
