fix f2fRecipes show view

--- a/views/recipeBooks/index.ejs
+++ b/views/recipeBooks/index.ejs
@@ -7,11 +7,13 @@
         <img class="activator" src="<% if (books[i].f2fRecipes[0]) { %><%= books[i].f2fRecipes[0].imageUrl %><% } else { %> https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2Iyn7r1TAVY7j-8DIi_ANEQyLIAzOifav-1Y3Ezpa26CdJrtQ<% } %>">
       </div>
       <div class="card-content">
-        <span class="card-title activator grey-text text-darken-4"><%= books[i].title %><i class="material-icons right">more_vert</i></span>
+        <span class="card-title activator grey-text text-darken-4"><% if(books[i].title) { %><%= books[i].title %><% } else { %><%= "no title" %><% } %><i class="material-icons right">more_vert</i></span>
         <p class="look-inside"><a href="/recipe_books/<%= books[i].id %>">Look Inside</a></p>
       </div>
       <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i><%=  books[i].f2fRecipes.length + books[i].userRecipes.length%> <%= books[i].title %> recipes</span>
+        <span class="card-title grey-text text-darken-4">
+        <i class="material-icons right">close</i>
+        <%=  books[i].f2fRecipes.length + books[i].userRecipes.length %> <%= books[i].title %> <%= viewHelpers.pluralize("recipe", books[i].f2fRecipes.length + books[i].userRecipes.length) %></span>
         <p># of F2F Recipes: <%= books[i].f2fRecipes.length %></p>
         <p># of <%= books[i].owner.firstName %>'s Recipes: <%= books[i].userRecipes.length %></p>
         <p>created <%= moment(books[i].dateCreated).fromNow() %></p>
